22-Jan-2012 Fixing Null reference exception in QMakeBuilder for C.ObjectFileCollection when it is empty.

22-Jan-2012 Disabling more Qt configurations by default.

22-Jan-2012 Fixing warnings from QtCreator that unquoted backslashes are deprecated for recent executables added to the scripts.

22-Jan-2012 Added VisualC linker option 'IgnoredLibraries', taking an array of strings.

22-Jan-2012 Added VisualC linker option 'StackReserveAndCommit', taking a string of the format 'reserve[,commit]' to set the stack size and, optionally, the commit.

22-Jan-2012 C AdditionalOptions have been moved to the end of the option collection, so that they override all settings before hand.

22-Jan-2012 Versioned compilers with specific option interfaces must also have their C++ equivalents derive from them, in order to propogate the additional C options. (Because of the SetDelegates change.) This still shares a lot of code with the common C++ option collections. This had to be done because C# does not allow deriving from a generic type.

22-Jan-2012 Opus.Core.BaseOptionCollection now has a virtual function SetDelegates(), which is required to be implemented by derived classes in order to assign delegates to handling each option.

22-Jan-2012 Removing 'Commandline: ' prefix from all verbose native build output. It does not improve the readability of the output.

22-Jan-2012 Adding DisableWarnings C options, which takes an Opus.Core.StringArray value. For VisualC, this is a list of compiler warning numbers to disable. For Gcc-like compilers, this is the name of the warning to disable, e.g. for -Wno-used-parameters pass "used-parameters". No warnings are disabled by default.

22-Jan-2012 Opus.Core.StringArray is now cloneable and can be used as an option value.

22-Jan-2012 Improved error checking while cloning reference types used in option collections.

22-Jan-2012 Improved error message if an option value has not been given a default.
